# seen_engine

./: Cargo.toml
src/: DeveloperNotes  architecture.drawio  main.rs
src/ErrorManager/: AuditLogger.rs  error_manager.rs  errors.rs  mod.rs
src/IDATA/: IData.rs
src/IData/: IData.rs
src/IDataObj/: IData.rs
src/L_Business/: mod.rs
src/L_Business/ErrorManager/: AuditLogger.rs  error_manager.rs  mod.rs
src/L_Business/Logger/: mod.rs
src/L_Business/MicroServiceHandler/: ServiceHandler.rs  mod.rs
src/L_Data/: mod.rs
src/L_Data/IDataObj/: IData.rs  mod.rs
src/L_Data/db_handler/: DB_Manager.rs  IConnection.rs  mod.rs  mongo_db.rs  postgres.rs
src/L_Data/sharding_engine/: IShardController.rs  Ishard.rs  shard_manager.rs
src/L_Presentation/: mod.rs
src/L_Presentation/stream_module/: mod.rs  stream.rs  stream_manager.rs
src/L_Presentation/webserver/: ServerEngine.rs  mod.rs  server_manager.rs  wserver.rs
src/MicroServiceHandler/: DatabaseService.rs  Platform Builds Define Here  ServerService.rs  ServiceHandler.rs  Services.rs  ShardService.rs  StreamService.rs  microservicecontroller.rs  mod.rs
src/db_handler/: DB_Manager.rs  connection_attr.rs  errors.rs  mod.rs  mongo_db.rs  my_sql.rs  postgres.rs
src/galery(tests,notes)/: DeveloperNotes  architecture.drawio
src/sharding_engine/: IShardController.rs  Ishard.rs  ServiceShard.rs  ShardService.rs  mod.rs  shard_manager.rs  sharding_engine.rs
src/stream_module/: stream.rs  stream_manager.rs
