[package]
name = "seen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
mongodb = "2.7.1"
async-trait = "0.1.74"
futures-util = "0.3.29"
serde_derive = "1.0.192"
serde = "1.0.192"
lazy_static = "1.4.0"
tokio-fs = "0.2.0-alpha.6"
tokio-io = "0.2.0-alpha.6"
actix-web = "4.4.0"